# drainrs

./: Cargo.toml  README.md  drain.py  drain3.py  log.md  testlog1.txt
benches/: my_benchmark.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
