[package]
name = "drainrs"
version = "0.1.0"
edition = "2021"
license="MIT"
description="An implementation of the drain logparsing algorithm"
homepage="https://github.com/haydenflinner/rdrain"
repository="https://github.com/haydenflinner/rdrain"

[dependencies]
indextree = "4.5.0"
regex = "1"
log = "0.4.17"
thiserror = "1.0"
json_in_type = "1.1.1"
rustc-hash = "1.1.0"

[dev-dependencies]
simple_logger = "4.0.0"
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
debug = true